--- a/component-photo-gallery/src/App.css
+++ b/component-photo-gallery/src/App.css
@@ -23,8 +23,12 @@ img {
 }
 
 .image-item {
+  text-align: center;
+  border-radius: 1rem;
+  padding: 10px;
+  background-color: burlywood;
   margin: 5px;
   display: inline-block;
-  border: 1px solid cornflowerblue;
+  border: 2px solid black;
 }
 
